SOC-1940 | OG card images fixed on mobile

--- a/front/main/app/styles/component/_discussion-open-graph.scss
+++ b/front/main/app/styles/component/_discussion-open-graph.scss
@@ -79,6 +79,7 @@
 	}
 
 	.og-image {
+		flex-shrink: 0;
 		height: 100%;
 		margin: 0 auto;
 		width: 100%;
